tests/rt/pos/core/shortcut.picox
let fun f (x,y) = x + y
     |  f  _    = 42
in f 10
end