tests/rt/neg/ifc/simple02.picox
let val x = 10
    val y = 20
    val secret = mkSecret 42
in if secret > 0 then adv x else adv y
end
